# antenna

./: .env.example  .gitignore  LICENSE  README.md  config.toml  config.toml.example  pyproject.toml
src/antenna/: __main__.py  app.py  config.py  db.py  logging_util.py  models.py  presentation.py  schemas.py
src/antenna/migrations/: 001_init.sql  002_simplify_video_library.sql  003_remove_account_state_updated_at.sql
src/antenna/routers/: health.py  scans.py  settings.py  videos.py
src/antenna/services/: auto_scan_service.py  library_service.py  review_service.py  scan_service.py  scheduler_service.py  thumbnail_service.py  twitter_service.py  youtube_service.py
src/antenna/static/: app.css
src/antenna/templates/: accounts.html  base.html  dashboard.html  settings.html  videos.html
tests/: test_auto_scan_service.py  test_config.py  test_library_db.py  test_review_db.py  test_scheduler_service.py  test_thumbnail_service.py  test_twitter_service.py  test_web_pages.py  test_youtube_service.py
