[project]
name = "antenna"
version = "0.1.0"
description = "SQLite-backed web service for collecting Twitter timeline YouTube links."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.8.2",
    "requests>=2.32.0",
    "tzdata>=2025.2",
    "pydantic-settings>=2.8.0",
    "yt-dlp[default]>=2026.2.4",
    "tweety-ns @ https://github.com/mahrtayyab/tweety/archive/main.zip",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx2>=2.4.0",
    "ruff>=0.8.0",
]

[project.scripts]
antenna = "antenna.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/antenna"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
